--- a/templates/base_app.html
+++ b/templates/base_app.html
@@ -1016,6 +1016,11 @@
                                 </div>
                             </li>
                             {% endif %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="/" role="button">
+                                    <i class=" ri-file-text-line"></i> <span data-key="t-Tests">Course</span>
+                                </a>
+                            </li>
                             {% comment %} <li class="nav-item">
                                 <a class="nav-link menu-link" href="#sidebarCharts" data-bs-toggle="collapse" role="button"
                                     aria-expanded="false" aria-controls="sidebarCharts">
